[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/lakitu/lakitu.glb" type="PackedScene" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]

[sub_resource type="SphereShape" id=2]
margin = 0.05
radius = 1.6

[sub_resource type="CylinderShape" id=3]
radius = 0.85
height = 0.8

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.719075, 0 )
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Pivot" type="Spatial" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( 8, 0, 0, 0, 8, 0, 0, 0, 8, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, -0.3 )
shape = SubResource( 2 )

[node name="PenguinDetector" type="Area" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="PenguinDetector"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0863276, 2.70435 )
shape = SubResource( 3 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="PenguinDetector" to="." method="_on_PenguinDetector_body_entered"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
